Bug 339410 - Background color in search results do not respects system theme.
Summary: Background color in search results do not respects system theme.
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.8 (KDE 4.13)
Platform: Debian unstable Linux
: NOR normal
Target Milestone: ---
Assignee: marble-bugs
URL: http://postimg.org/image/7jzrj8c3l/
Keywords:
Depends on:
Blocks:
 
Reported: 2014-09-26 07:47 UTC by Ильдар Ахметгалеев
Modified: 2014-09-27 04:54 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ильдар Ахметгалеев 2014-09-26 07:47:27 UTC
Background color in search results do not respects system theme.
Search results shown as white on white with white on dark kde theme.


Reproducible: Always

Steps to Reproduce:
1. set dark KDE theme like krita-dark
2. run marble
3. try to search something


Actual Results:  
results will be shown as white on white text and will be unreadable

Expected Results:  
marble should respect KDE theme and show search results using theme colors
Comment 1 Dennis Nienhüser 2014-09-27 04:45:24 UTC
The 1.8/KDE-4.13 series is not maintained anymore, but I'll push a fix for its successors soon.
Comment 2 Dennis Nienhüser 2014-09-27 04:53:12 UTC
Git commit fe863defe7c846cad73092b95fb887603aa7516d by Dennis Nienhüser.
Committed on 27/09/2014 at 04:27.
Pushed by nienhueser into branch 'master'.

KML list view styling should only be active for real styles

Containers provide a default style with a white background, but this
one should not be used for list view styling, only custom styles.
Note that the white background color is correct as per KML spec,
so changing the default background color to something invalid /
transparent is no option.

M  +1    -1    src/lib/marble/GeoDataTreeModel.cpp

http://commits.kde.org/marble/fe863defe7c846cad73092b95fb887603aa7516d
Comment 3 Dennis Nienhüser 2014-09-27 04:53:59 UTC
Git commit ae6cf8403e88e10fb55ff9b83ed55f33c010277e by Dennis Nienhüser.
Committed on 02/08/2014 at 09:11.
Pushed by nienhueser into branch 'KDE/4.14'.

Provide access to a custom style without returning a default one

(cherry picked from commit fc9874fcf6d09c24f9eda0d5d805c0baa1a59a63)

Introduces a new method in a public header, but since it is
non-virtual it does not break ABI.

M  +5    -0    src/lib/marble/geodata/data/GeoDataFeature.cpp
M  +5    -1    src/lib/marble/geodata/data/GeoDataFeature.h

http://commits.kde.org/marble/ae6cf8403e88e10fb55ff9b83ed55f33c010277e
Comment 4 Dennis Nienhüser 2014-09-27 04:54:00 UTC
Git commit aea4a0fdf1542c13449fc83b12160049de79de83 by Dennis Nienhüser.
Committed on 27/09/2014 at 04:27.
Pushed by nienhueser into branch 'KDE/4.14'.

KML list view styling should only be active for real styles

Containers provide a default style with a white background, but this
one should not be used for list view styling, only custom styles.
Note that the white background color is correct as per KML spec,
so changing the default background color to something invalid /
transparent is no option.
FIXED-IN: 4.14.2
(cherry picked from commit fe863defe7c846cad73092b95fb887603aa7516d)

M  +1    -1    src/lib/marble/GeoDataTreeModel.cpp

http://commits.kde.org/marble/aea4a0fdf1542c13449fc83b12160049de79de83