KML list view styling should only be active for real styles

Containers provide a default style with a white background, but this
one should not be used for list view styling, only custom styles.
Note that the white background color is correct as per KML spec,
so changing the default background color to something invalid /
transparent is no option.

BUG: 339410
FIXED-IN: 4.14.2
(cherry picked from commit fe863defe7c846cad73092b95fb887603aa7516d)